# emfe_plugins

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  README.md  README_ja.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
api/: README.md  README_ja.md  emfe_plugin.h
api/docs/: ffi_reference.md  ffi_reference_ja.md  plugin_developer_guide.md  plugin_developer_guide_ja.md  quickstart_cpp.md  quickstart_cpp_ja.md  quickstart_rust.md  quickstart_rust_ja.md
em8/: CMakeLists.txt
em8/docs/: em8_reference.md  em8_reference_ja.md
em8/examples/echo/: gen_echo.py
em8/examples/fibonacci/: gen_fibonacci.py
em8/examples/hello/: gen_hello.py
em8/examples/timer_blink/: gen_timer_blink.py
em8/src/: CMakeLists.txt  Em8Cpu.cpp  Em8Cpu.h  Em8Memory.cpp  Em8Memory.h  Em8Timer.cpp  Em8Timer.h  Em8Uart.cpp  Em8Uart.h  pch.cpp  pch.h  plugin_em8.cpp  plugin_em8.def
em8/tests/: CMakeLists.txt  test_em8.cpp
installer/: emfe_plugins.iss
mc68030/: CMakeLists.txt  README.md
mc68030/docs/: mvme147_settings.md  mvme147_settings_ja.md
mc68030/src/: CMakeLists.txt  pch.cpp  pch.h  plugin_mc68030.cpp  plugin_mc68030.def
mc68030/tests/: CMakeLists.txt  test_plugin.cpp
mc6809/: Cargo.toml  README.md
mc6809/.cargo/: config.toml
mc6809/docs/: mc6809_reference.md  mc6809_reference_ja.md
mc6809/examples/: README.md
mc6809/examples/echo/: echo.s19  gen_echo.py
mc6809/examples/forth/: README.md  README_ja.md  forth.asm  forth.lst  forth.s19
mc6809/examples/forth/docs/: LANGUAGE_AND_IMPL.md  LANGUAGE_AND_IMPL_ja.md  SHOWCASE.md  SHOWCASE_ja.md  USER_GUIDE.md  USER_GUIDE_ja.md
mc6809/examples/hello/: gen_hello.py  hello.s19
mc6809/examples/lisp/: README.md  README_ja.md  lisp.asm  lisp.lst  lisp.s19
mc6809/examples/lisp/docs/: LANGUAGE_AND_IMPL.md  LANGUAGE_AND_IMPL_ja.md  SHOWCASE.md  SHOWCASE_ja.md  USER_GUIDE.md  USER_GUIDE_ja.md
mc6809/examples/stack/: gen_stack.py  stack.s19
mc6809/examples/swi_demo/: README.md  swi_demo.asm  swi_demo.lst  swi_demo.s19
mc6809/src/: lib.rs
mc6809/tests/: smoke.rs
rv32ima/docs/: design_notes.md  design_notes_ja.md
z8000/: CMakeLists.txt  README.md
z8000/docs/: z8000_reference.md  z8000_reference_ja.md
z8000/examples/: README.md
z8000/examples/echo/: gen_echo.py
z8000/examples/fibonacci/: gen_fibonacci.py
z8000/examples/hello/: gen_hello.py
z8000/src/: CMakeLists.txt  Z8000Cpu.cpp  Z8000Cpu.h  Z8000Disasm.cpp  Z8000Memory.cpp  Z8000Memory.h  Z8000Timer.cpp  Z8000Timer.h  Z8000Uart.cpp  Z8000Uart.h  pch.h  plugin_z8000.cpp  plugin_z8000.def
z8000/tests/: CMakeLists.txt  test_z8000.cpp
