[package]
name = "emfe_plugin_mc6809"
version = "0.1.0"
edition = "2021"
authors = ["hha0x617 <hha0x617@gmail.com>"]
description = "MC6809 emfe plugin DLL (wraps em6809-core)"
license = "MIT OR Apache-2.0"

[lib]
name = "emfe_plugin_mc6809"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Wrap the em6809-core headless emulator crate (extracted out of the em6809
# GUI app — see
# https://github.com/hha0x617/em6809/blob/main/docs/extract_em6809_core_plan.md
# for the rationale).  Pinned to the same git rev as em6809's GUI app so
# that the plugin DLL and the standalone GUI run identical CPU-core code.
# Bump in lockstep with em6809's pin when the upstream API moves.  When
# em6809-core is published on crates.io we switch this to a normal semver
# pin.
em6809-core = { git = "https://github.com/hha0x617/em6809-core", rev = "185a39f439b72791cf121dc68c83f1e764c8a6d5" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Unwind so every FFI entry can `catch_unwind` and convert plugin panics into
# EmfeResult::ErrMemory, keeping the host (emfe.exe) alive across plugin bugs.
panic = "unwind"
